Fix contrast ratio for options link

--- a/src/templates/styles.css
+++ b/src/templates/styles.css
@@ -15,5 +15,5 @@ input[type="checkbox"]    { vertical-align:middle; margin-left: auto;}
 #output                   { font-family: monospace; border: 1px dashed black; padding: .5em .1em 0 .1em; text-align: center; background: white; color: black; font-weight: bold; font-size: 1.2em; min-height: 20px; }
 #output.hide              { background-color: black; }
 #output.error.hide        { background-color: none; }
-a.options                 { color: #5b93be; }
+a.options                 { color: darkblue; }
 i#copyToClipboardBtn      { color: #5b93be; font-size: 26px; margin: 0 0 0 5px;}
